--- a/pages/self/self.wxss
+++ b/pages/self/self.wxss
@@ -1,4 +1,21 @@
 /* pages/self/self.wxss */
+.ripple {
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 100%;
+  height:10px;
+  width:10px;
+  margin-top: -90px;
+  position: absolute;
+  -webkit-transform: scale(0);
+  z-index: 10
+}
+@-webkit-keyframes ripple {
+  100% {
+  -webkit-transform: scale(12);
+  transform: scale(12);
+  background-color: transparent;
+  }
+}
 page{
   height:100%;
 }
@@ -34,7 +51,7 @@ background-color: white;
   box-shadow:  -20rpx 20rpx 15rpx #ccc;
   position: absolute;
   display: flex;
-  z-index: 999;
+  z-index: 0;
   color:rgb(240, 240, 240);
   flex-direction: column;
   align-items: center;
